Most of the implementation of issue #333 Simplify OutputSynth  done - still needs Midi Option Default Instruments + robusteness testing